Fixes issue 17: link hover and focus contrast.

--- a/server/main/static/main/common.css
+++ b/server/main/static/main/common.css
@@ -74,6 +74,10 @@ a {
     color: #4c81c0;
     text-decoration: none;
 }
+a:hover,
+a:focus {
+    color: #4378b7;
+}
 a.darker {
     color: #000000;
 }
